[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fmlb-py"
authors = [
    { name="ego-lay-atman-bay" },
]
description = " Read ark files in the My Little Pony Gameloft game"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "dataclasses-struct",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/ego-lay-atman-bay/fmlb-py"
"Bug Tracker" = "https://github.com/ego-lay-atman-bay/fmlb-py/issues"
# "Documentation" = "https://ego-lay-atman-bay.github.io/fmlb-py/"

[tool.setuptools]
package-dir = {"fmlb" = "fmlb"}

[tool.setuptools.dynamic]
version = { attr = "fmlb.__version__" }

[project.scripts]
fmlb-py = 'fmlb.__main__:main'
